_______________________________

Solarus 1.5.0 (in progress)
_______________________________

Engine changes
--------------

* Print when the main loop starts and stops.
* Print the Lua version at startup (#692).
* Improve the performance of custom entity collisions.
* Improve the performance of collisions by using a quadtree.
* Entities far from the camera are no longer suspended.
* Fix sol.input.get_mouse_coordinates() (#734).
* Fix straight movement precision.

Lua API changes
---------------

Changes that introduce incompatibilities:

* Items with amount now have a default max amount of 1000 (#688).

Changes that do not introduce incompatibilities:

* Add a function sol.main.get_type() (#744).
* Add a method map:get_entities_in_rectangle() (#142).
* Add a method block:get_sprite().
* entity:set_optimization_distance() is now only a hint for the engine.

Data files format changes
-------------------------

* Dialogs: Allow empty texts.

___________________________

Solarus 1.4.5 (in progress)
___________________________

Bug fixes for the 1.4 release.

* Fix stuck on non-traversable dynamic tiles covered by traversables (#769).
* Fix collision detection of custom entities that do not move.
* Fix collisions triggered for removed entities (#710).
* Fix pickables with special movement falling in holes too early.

__________________________

Solarus 1.4.4 (2015-08-19)
__________________________

Bug fixes for the 1.4 release.

* Fix pickables falling in holes even when hooked (#740).

__________________________

Solarus 1.4.3 (2015-08-12)
__________________________

Bug fixes for the 1.4 release.

* Fix a compilation error with Mac OS X.
* Fix crash at exit when a surface has a movement with callback (#699).
* Fix crash when removing a custom entity (#690).
* Fix crash when a sprite file is missing or has no animation (#700).
* Fix crash when trying to remove a sprite already removed (#705).
* Fix crash when a custom entity collision or traversable test errors.